--- a/src/dune
+++ b/src/dune
@@ -7,5 +7,5 @@
 
 (install
  (section bin)
- (files gwd.exe gwu.exe gwc1.exe gwc2.exe mk_consang.exe update_nldb.exe)
+ (files gwd.exe gwu.exe gwc1.exe mk_consang.exe update_nldb.exe)
 )
