Reworking user inputs sanitization (especially for notes fields).
Removed Util.sanitize_html (was note reliable).
Util.escape_html: added single quote to escaped characters.
Replaced Util.quote_escaped with Util.escape_html.

--- a/lib/dune.in
+++ b/lib/dune.in
@@ -8,6 +8,7 @@
             str
             camlp5
             camlp5.gramlib
-            geneweb.wserver)
+            geneweb.wserver
+            markup)
  (modules_without_implementation config dbdisk def templAst)
 )
