--- a/tools/Makefile.inc.unix
+++ b/tools/Makefile.inc.unix
@@ -7,7 +7,7 @@ CAMLP5F=-DUNIX
 CAMLP5D=+camlp5
 LIBUNIX=-cclib -lunix
 OCAMLC=ocamlc.opt -warn-error A
-OCAMLOPT=ocamlfind ocamlopt -warn-error A -package piqirun.ext
+OCAMLOPT=ocamlfind ocamlopt -warn-error A
 OCAMLI=
 OCAMLD=
 STRIP=strip
